--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Project-Landing-Page</title>
   </head>
   <body>
@@ -17,69 +23,73 @@
         </ul>
       </div>
     </header>
-    <div class="hero-container">
-      <div class="left-container">
-        <p class="header-hero">This website is awesome</p>
-        <p class="secondary-text">
-          This website has some subtext that goes here under the main title.
-          It's a smaller font and the color is lower contrast
+
+    <main>
+      <div class="main-section-one">
+        <div class="left-container">
+          <p class="header-hero">This website is awesome</p>
+          <p class="secondary-text">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast
+          </p>
+          <button class="button-one">Sign up</button>
+        </div>
+        <div class="right-container">
+          <p class="secondary-text">this is a placeholder for an image</p>
+        </div>
+      </div>
+      <div class="main-section-two">
+        <p class="header-information">Some random information</p>
+        <div class="boxes-container">
+          <div class="item">
+            <div class="box"></div>
+            <p class="text-item">
+              this is some subtext under an ilustration or image
+            </p>
+          </div>
+          <div class="item">
+            <div class="box"></div>
+            <p class="text-item">
+              this is some subtext under an ilustration or image
+            </p>
+          </div>
+          <div class="item">
+            <div class="box"></div>
+            <p class="text-item">
+              this is some subtext under an ilustration or image
+            </p>
+          </div>
+          <div class="item">
+            <div class="box"></div>
+            <p class="text-item">
+              this is some subtext under an ilustration or image
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="main-section-three">
+        <p class="main-text-cite">
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows? All I know is that it looks nice.
         </p>
-        <button>Sign up</button>
+        <p class="sign-cite">-Thor, God of Thunder</p>
       </div>
-      <div class="right-container">
-        <p>this is a placeholder for an image</p>
-      </div>
-    </div>
-    <div class="main-section-one">
-      <p class="header-information">Some random information</p>
-      <div class="boxes-container">
-        <div class="item">
-          <div class="box"></div>
-          <p class="text-item">
-            this is some subtext under an ilustration or image
-          </p>
-        </div>
-        <div class="item">
-          <div class="box"></div>
-          <p class="text-item">
-            this is some subtext under an ilustration or image
-          </p>
-        </div>
-        <div class="item">
-          <div class="box"></div>
-          <p class="text-item">
-            this is some subtext under an ilustration or image
-          </p>
-        </div>
-        <div class="item">
-          <div class="box"></div>
-          <p class="text-item">
-            this is some subtext under an ilustration or image
-          </p>
+      <div class="main-section-four">
+        <div class="frame-message">
+          <div class="text-container">
+            <p class="header-message">Call to action! It's time!</p>
+            <p class="secondary-text-message">
+              Sign up fot our product by clicking that button right there!
+            </p>
+          </div>
+          <button>Sign up</button>
         </div>
       </div>
-    </div>
-    <div class="main-section-two">
-      <p class="main-text-cite">
-        This is an inspiring quote, or a testimonial from a customer. Maybe it's
-        just filling up space, or maybe people will actually read it. Who knows?
-        All I know is that it looks nice.
-      </p>
-      <p class="sign-cite">-Thor, God of Thunder</p>
-    </div>
-    <div class="main-section-three">
-      <div class="frame-message">
-        <div class="text-container">
-          <p class="header-message">Call to action! It's time!</p>
-          <p class="secondary-text-message">
-            Sign up fot our product by clicking that button right there!
-          </p>
-        </div>
-        <button>Sign up</button>
-      </div>
-    </div>
+    </main>
+
     <footer>
-      <p>Copyright &#169; The Odin Proyect 2025</p>
+      <p class="secondary-text">Copyright &#169; The Odin Proyect 2025</p>
     </footer>
   </body>
 </html>
