Se modifican los archivos index.html y style.css
Se añaden clases para facilitar la aplicación de estilos y se asignan los estilos correspondientes a lo solicitado.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
           <p class="secondary-text">this is a placeholder for an image</p>
         </div>
       </div>
+
       <div class="main-section-two">
-        <p class="header-information">Some random information</p>
+        <p class="header-information">Some random information.</p>
         <div class="boxes-container">
           <div class="item">
             <div class="box"></div>
@@ -67,6 +68,7 @@
           </div>
         </div>
       </div>
+
       <div class="main-section-three">
         <p class="main-text-cite">
           This is an inspiring quote, or a testimonial from a customer. Maybe
@@ -75,15 +77,16 @@
         </p>
         <p class="sign-cite">-Thor, God of Thunder</p>
       </div>
+
       <div class="main-section-four">
         <div class="frame-message">
           <div class="text-container">
             <p class="header-message">Call to action! It's time!</p>
-            <p class="secondary-text-message">
+            <p class="secondary-text">
               Sign up fot our product by clicking that button right there!
             </p>
           </div>
-          <button>Sign up</button>
+          <button class="button-two">Sign up</button>
         </div>
       </div>
     </main>
